fixed location suggestion z-index, minor tweaks for showing group-avatar and home ui

--- a/client/src/features/groups/commentsSection.module.css
+++ b/client/src/features/groups/commentsSection.module.css
@@ -181,9 +181,9 @@
 
     display: flex;
     align-items: center;
-    gap: .25rem;
+    gap: .5rem;
 
-    padding: .5em 1.5em;
+    padding: .5em 1.25em;
     border-radius: 8px;
 
 }
