--- a/client/src/features/home/components/SearchArea/search.module.css
+++ b/client/src/features/home/components/SearchArea/search.module.css
@@ -6,9 +6,10 @@
 
     border-radius: 8px;
 
-    display: flex;
-    gap: 12px;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+    gap: .75rem;
+    grid-auto-rows: 56px;
 
 
     >* {
@@ -24,6 +25,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 3.5rem;
 }
 
 .searchbtn {
@@ -46,8 +48,7 @@
 }
 
 .loadingLoc {
-    flex-shrink: 0;
-    flex-grow: 1;
+    flex: 1;
     padding: 16px;
     border: 1px solid var(--clr-border);
     border-radius: 15px;
@@ -114,6 +115,7 @@
 }
 
 .suggestion {
+    z-index: 5;
     position: absolute;
     left: 0;
     top: 56px;
@@ -161,16 +163,17 @@ ul {
 
 
 
-@container(max-width:768px) {
+/* @container(max-width:768px) {
     .searchbox {
         background-color: var(--clr-bg);
         margin-inline: auto;
 
         border-radius: 15px;
+        
         box-shadow: 0 2px 2px 0 rgba(0, 0, 0, .3), 0 2px 6px -6px rgba(0, 0, 0, .15);
 
     }
-}
+} */
 
 .test {
 
