--- a/client/src/features/home/home.module.css
+++ b/client/src/features/home/home.module.css
@@ -119,6 +119,6 @@
 @container(max-width:480px) {
     .bannerTitle {
         font-size: 32px;
-        line-height: 44px;
+        /* line-height: 44px; */
     }
 }
